fixed layout issues in smaller screens

--- a/parcel/pages/_index.scss
+++ b/parcel/pages/_index.scss
@@ -32,12 +32,12 @@ footer {
 }
 
 #assets .row {
-  padding: 5vw;
+  padding: 5vw 10vw;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20vw, 1fr));
   grid-gap: 5vw;
   margin: 0 auto;
-  max-width: 2000px;
+  // max-width: 2000px;
 }
 
 #assets h2 {
@@ -64,15 +64,17 @@ footer {
 
 #blog.container {
   margin: 5vw 15vw;
+  display: flex;
+  justify-content: center;
 }
 
 #blog .row {
   padding: 5vw;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(40%, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 5vw;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 1500px;
 }
 
 #blog .column {
@@ -109,6 +111,23 @@ footer {
   margin: 0;
   height: 50vh;
 }
-/* .center {
-    text-align: center;
-  } */
+
+@media only screen and (max-width: 820px) {
+  #assets .row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  #blog .row {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+// @media only screen and (min-width: 1820px) {
+//   // #assets .row {
+//   //   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+//   // }
+
+//   #blog .row {
+//     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+//   }
+// }
